@@ -5,10 +5,25 @@ __version__ = "$Revision$"
 
 # Copyright 2009 Michael M. Hoffman <mmh1@washington.edu>
 
+from math import ceil
 import sys
 
 ## native specs work the same way as SGE
-from .common import JobTemplateFactory as _JobTemplateFactory, _make_native_spec
+from .._util import KB, MB
+from .common import _JobTemplateFactory, _make_native_spec
+
+class JobTemplateFactory(_JobTemplateFactory):
+    def make_res_req(self, mem_usage):
+        return "rusage[mem=%s]" % ceil(mem_usage / MB)
+
+    def make_native_spec(self):
+        mem_limit_spec = ceil(self.mem_limit / KB)
+
+        # bsub -R: resource requirement
+        # bsub -v: hard virtual memory limit
+        res_spec = make_native_spec(R=self.res_req, v=mem_limit_spec)
+
+        return " ".join([self.native_spec, res_spec])
 
 def make_native_spec(args):
     return _make_native_spec(*args)
