@@ -9,28 +9,30 @@ from math import ceil
 import sys
 
 from .._util import MB
-from .common import _JobTemplateFactory, _make_native_spec, calc_mem_limit
+from .common import _JobTemplateFactory, _make_native_spec
 
-# bsub -w: switches off job validation
+# qsub -w: switches off job validation
 NATIVE_SPEC_DEFAULT = dict(w="n")
 
 class JobTemplateFactory(_JobTemplateFactory):
     def make_res_req(self, mem_usage):
         return [make_single_res_req("mem_requested", mem_usage),
-                make_single_res_req("h_vmem", calc_mem_limit(mem_usage))]
+                make_single_res_req("h_vmem", self.mem_limit)]
 
     def make_native_spec(self):
-        # bsub -l: resource requirement
+        # qsub -l: resource requirement
         res_spec = make_native_spec(l=self.res_req)
 
-        return " ".join([self.native_spec, res_spec])
+        return " ".join([self.native_spec,
+                         _make_native_spec(**NATIVE_SPEC_DEFAULT),
+                         res_spec])
 
 def make_single_res_req(name, mem):
     # round up to the next mebibyte
     return "%s=%dM" % (name, ceil(mem / MB))
 
 def make_native_spec(args):
-    return _make_native_spec(*args, **NATIVE_SPEC_DEFAULT)
+    return _make_native_spec(*args)
 
 def main(args=sys.argv[1:]):
     pass
