@@ -2,6 +2,7 @@
 
 * segway: adding switching weights
 * segway: restoring weighting to global number of datapoints in a track
+* segway: now supports Platform LSF with FedStage DRMAA for LSF
 * segway: moved SGE-specific code into modular driver architecture
 * segway: start quoting words with spaces in log/run.sh
 * genomedata >0.1.2 is now a prerequisite
